fix: iframe width on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -26,15 +26,7 @@
 iframe {
   display: block;
   margin: 0 auto;
-}
-
-.resource-container {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-}
-.resource-container > * {
-  max-width: 600px;
+  max-width: 100%;
 }
 
 .index-pattern {
